@@ -5,6 +5,7 @@ import org.springframework.stereotype.Component;
 
 import java.io.IOException;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 
 @Component
@@ -15,14 +16,14 @@ public class PingScheduler {
     @Scheduled(cron = "0 */5 * * * *") // Every 5 minutes
     public void pingApp() {
         try {
-            URL targetUrl = new URL(TARGET_URL);
+            URL targetUrl = URI.create(TARGET_URL).toURL();
             HttpURLConnection connection = (HttpURLConnection) targetUrl.openConnection();
             connection.setRequestMethod("HEAD");
             int responseCode = connection.getResponseCode();
             if (responseCode >= 200 && responseCode < 400) {
-                System.out.println("Ping successful: " + responseCode);
+                IO.println("Ping successful: " + responseCode);
             } else {
-                System.out.println("Ping failed: " + responseCode);
+                IO.println("Ping failed: " + responseCode);
             }
         } catch (IOException e) {
             System.err.println("Ping failed: " + e.getMessage());
